--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Pagina de Prueba</h1>
     <p>Este es una edición desde VsCode para aprender a utilizar Git :)</p>
+    <p>despues de las modificaciones se debe hacer un commit</p>
 </body>
 </html>
