Se agrego estilos css en el index

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Pagina de Prueba</h1>
+    <div>
+        <p>Este es una edición desde VsCode para aprender a utilizar Git :)</p>
+        <p>despues de las modificaciones se debe hacer un commit</p>
+    </div>
     
-    <p>Este es una edición desde VsCode para aprender a utilizar Git :)</p>
-    <p>despues de las modificaciones se debe hacer un commit</p>
-
 </body>
 </html>
