--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
         <p>Este es una edición desde VsCode para aprender a utilizar Git :)</p>
         <p>despues de las modificaciones se debe hacer un commit</p>
+        <p>Esta es una nueva </p>
     </div>
     
 </body>
