Se agrego una imagen en la pagina 2

--- a/page2.html
+++ b/page2.html
@@ -16,5 +16,8 @@
     </p>
     
     <img src="https://www.florcitacosmetics.com/pedidos/src/doge-dancing-v3.gif" alt="Dance with Doge!!!">
+
+    <div class="tenor-gif-embed" data-postid="15072629" data-share-method="host" data-width="10%" data-aspect-ratio="0.6365461847389559"><a href="https://tenor.com/view/ok-boomer-doge-doge-dancing-dog-dance-gif-15072629">Ok Boomer Doge GIF</a> from <a href="https://tenor.com/search/okboomer-gifs">Okboomer GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+
 </body>
 </html>
