--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Pagina 2</title>
+    <link rel="icon" type="image/png" sizes="96x96" href="https://www.florcitacosmetics.com/pedidos/src/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Pagina de Prueba</h1>
-    <div>
-        <p>Este es una edición desde VsCode para aprender a utilizar Git :)</p>
-        <p>despues de las modificaciones se debe hacer un commit</p>
-        <div>
-            <p>Modificando xd</p>
-        </div>
-        
-    </div>
+    <h1>Esta es la Segunda pagina</h1>
+    <p>
+        En esta pagina se puede ver un par de ajustes que carecia la pagina principal
+        Puesto que en esta se aplico mejoras visuales.
+    </p>
     
+    <img src="https://www.florcitacosmetics.com/pedidos/src/doge-dancing-v3.gif" alt="Dance with Doge!!!">
+
+    <div class="tenor-gif-embed" data-postid="15072629" data-share-method="host" data-width="10%" data-aspect-ratio="0.6365461847389559"><a href="https://tenor.com/view/ok-boomer-doge-doge-dancing-dog-dance-gif-15072629">Ok Boomer Doge GIF</a> from <a href="https://tenor.com/search/okboomer-gifs">Okboomer GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+
 </body>
 </html>
