--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         En esta pagina se puede ver un par de ajustes que carecia la pagina principal
         Puesto que en esta se aplico mejoras visuales.
     </p>
-    
+    <img src="https://newtoki95.com/data/member_image/ji/jiho0331.gif?_=1612960568" alt="jiho">
+    <img src="https://newtoki95.com/data/member_image/fe/fell.gif?_=1613759979" alt="fell">
     <img src="https://www.florcitacosmetics.com/pedidos/src/doge-dancing-v3.gif" alt="Dance with Doge!!!">
 
-    <div class="tenor-gif-embed" data-postid="15072629" data-share-method="host" data-width="10%" data-aspect-ratio="0.6365461847389559"><a href="https://tenor.com/view/ok-boomer-doge-doge-dancing-dog-dance-gif-15072629">Ok Boomer Doge GIF</a> from <a href="https://tenor.com/search/okboomer-gifs">Okboomer GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    <!-- <div class="tenor-gif-embed" data-postid="15072629" data-share-method="host" data-width="10%" data-aspect-ratio="0.6365461847389559"><a href="https://tenor.com/view/ok-boomer-doge-doge-dancing-dog-dance-gif-15072629">Ok Boomer Doge GIF</a> from <a href="https://tenor.com/search/okboomer-gifs">Okboomer GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script> -->
 
 </body>
 </html>
